src/styles.scss
$primary: #b6eb3f;
$dark: #1e3881;
$color-mode-type: 'media-query';

@import "@angular/material/prebuilt-themes/deeppurple-amber.css";
@import "bootstrap/scss/bootstrap";
@import "bootstrap-icons";

html, body {
  height: 100%;
}

.btn-floating-action {
  position: fixed;
  bottom: 2rem;
  right: 2rem;
}

.visible-hover {
  visibility: hidden;
}

:hover > .visible-hover {
  visibility: unset;
}

:hover + .visible-hover {
  visibility: unset;
}

@media (hover: none) {
  .visible-hover {
    visibility: unset;
  }
}

//Hide Arrow From Input Box
/* Chrome, Safari, Edge, Opera */
input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}
/* Firefox */
input[type=number] {
  -moz-appearance: textfield;
}

.data-collector-item {
  list-style-type: none; /* Remove the dot before the checkbox */
  padding: 5px; /* Add some padding for better spacing */
}

.input-group-text + .form-control::file-selector-button {
  display: none;
}

.nav .nav-item.active {
  background-color: $dark;
}
.nav .nav-item.active::before {
  color: $primary;
}

// Hide dropdown arrow if the button is only an icon without text
.dropdown-toggle[class*="bi-"]:empty::after {
  display: none;
}

.icon-conserve::before {
  display: inline-block;
  font-style: normal;
  font-weight: normal !important;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  vertical-align: -.125em;
  width: 0.75em;
  height: 0.75em;
  content: url("/assets/logos/Gemini-Icon.svg");
}

